# mkgendocs

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
mkgendocs/: gendocs.py  mkgendocs.yml  parse.py
tests/: test_extract_class.py
