[tool.poetry]
name = "mkgendocs"
version = "0.8.1"
repository = "https://github.com/davidenunes/mkgendocs"
homepage = "https://github.com/davidenunes/mkgendocs"
readme = 'README.md'
description = "mkgendocs is a Python tool to automate the generation of documentation from docstrings in markdown"
license = "Apache-2.0"
keywords = ["mkgendocs", "docs", "documentation", "automation", "mkdocs", "cli"]
authors = ["Davide Nunes <davidelnunes@gmail.com>"]

classifiers = [
    'Environment :: Console',
    'Operating System :: OS Independent',
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    'Programming Language :: Python :: 3 :: Only',
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    'Topic :: Documentation',
    'Topic :: Text Processing'
]

[tool.poetry.scripts]
gendocs = 'mkgendocs.gendocs:main'

[tool.poetry.dependencies]
python = "^3.5"
six = '*'
pyyaml = '*'
astor = '*'
mako = '*'
